--- a/app/templates/play/item.html
+++ b/app/templates/play/item.html
@@ -17,6 +17,7 @@
             'm': '{{ url_for('configure_index') }}',
             'e': '{{ url_for('configure_item', item_id=current.id) }}',
         };
+        const funcForKey = {};
         document.addEventListener('DOMContentLoaded', () => {
             document.addEventListener('keypress', (event) => {
                 const key = event.key.toLowerCase();
@@ -32,6 +33,8 @@
                     {% endif %}
                 } else if (linkForKey[key]) {
                     window.location.href = linkForKey[key];
+                } else if (funcForKey[key]) {
+                    funcForKey[key]();
                 }
             });
         });
@@ -222,10 +225,17 @@
                                                             class="gain-btn go-button"
                                                             id="gain-btn_{{ recipe.id }}">Gain</button>
                                                 {% else %}
+                                                    {% set letter = link_letters.next() %}
+                                                    [{{ letter }}]
                                                     <button type="button"
                                                             class="start-stop-btn go-button"
                                                             id="start-stop-btn_{{ recipe.id }}"
                                                             data-recipe-id="{{ recipe.id }}">Start</button>
+                                                    <script>
+                                                    funcForKey['{{ letter }}'] = () => {
+                                                        document.querySelector('#start-stop-btn_{{ recipe.id }}').click();
+                                                    };
+                                                    </script>
                                                 {% endif %}
                                                 {% else %}
                                                     <span style="font-size: 1em"
@@ -600,6 +610,8 @@
                             startBtn.innerHTML = "Stop";
                             startBtn.classList.add("dangerous-button");
                             startBtn.classList.remove("go-button");
+                            const row = $(startBtn).closest('tr');
+                            rateDuration = parseFloat(row.find('.rate-duration').text()) || 1;
                         } else {
                             startBtn.innerHTML = "Start";
                             startBtn.classList.add("go-button");
